feat: add links hover style

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "cSpell.words": [
-        "Brawhalla",
-        "estressante",
-        "jogar",
-        "jogo",
-        "muito",
-        "Senai"
+        "Autor",
+        "Contato",
+        "imagem",
+        "mejor",
+        "mundo",
+        "Noticias",
+        "Varios"
     ]
 }
