feat add notice

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,12 @@
         "Autor",
         "Contato",
         "imagem",
+        "jogar",
         "mejor",
         "mundo",
         "Noticias",
-        "Varios"
+        "Publicado",
+        "Varios",
+        "Venha"
     ]
 }
